corrigindo bug do teclado no celular

--- a/Estilo/style.css
+++ b/Estilo/style.css
@@ -282,6 +282,11 @@ footer p {
     text-align: center;
 }
 
+.nome {
+    background-color: none;
+    
+}
+
 @media screen and (max-width: 600px){
 
 body{
