--- a/Estilo/style.css
+++ b/Estilo/style.css
@@ -283,8 +283,8 @@ footer p {
 }
 
 .texto{
-    height:0;
-    width:0;
+    height:20px;
+    width:20px;
     visibility: hidden;
     padding:0;
     margin:0;
