--- a/Estilo/style.css
+++ b/Estilo/style.css
@@ -285,16 +285,23 @@ footer p {
 .texto{
     height:20px;
     width:20px;
-    visibility: hidden;
+    opacity: 0;
     padding:0;
     margin:0;
     float:right;
+    display: block;
 }
+
+
 
 @media screen and (max-width: 600px){
 
 body{
     width: 100%;
+}
+
+.texto{
+    width: 50px;
 }
 
 #entrada-texto {
@@ -328,6 +335,8 @@ body{
     font-size: 20px;
     color: var(--cor1);
 }
+
+
 
 canvas{
     height: 300px;
