--- a/Estilo/style.css
+++ b/Estilo/style.css
@@ -250,20 +250,6 @@ footer p {
     display: none;
 }
 
-.aviso {
-    width: 300px;
-    height: 50px;
-    font-size: 1em;
-    color: white;
-    background-color: var(--cor3);
-    border: 1px solid var(--cor2);
-    border-radius: 10px;
-    margin: auto;
-    margin-top: 10px;
-    text-align: center;
-    padding: 15px;
-}
-
 .quadro {
     width: 400px;
     margin: auto;
@@ -289,6 +275,10 @@ footer p {
     padding:0;
     margin:0;
     display: block;
+}
+
+.div-letras{
+    display: none;
 }
 
 
@@ -354,5 +344,37 @@ footer{
 canvas{
     height: 300px;
 }
+
+.div-letras{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.tecladoL1{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.tecladoL2{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.tecladoL3{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.div-letras button {
+ margin: 4px;
+ background-color: var(--cor1);
+ border-radius: 7px;
+ color: white;
+ font-weight: bolder;
+ }
 
 }
