--- a/Estilo/style.css
+++ b/Estilo/style.css
@@ -283,6 +283,32 @@ footer p {
     display: none;
 }
 
+.popup-wrapper {
+    background: rgba(0, 0, 0, .5);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.popup {
+    font-family: var(--fonte2);
+    text-align: center;
+    width: 100%;
+    max-width: 820px;
+    margin: 10% auto;
+    padding: 20px;
+    background: var(--cor2);
+    position: relative;
+}
+
+.popup h2 {
+    font-weight: bold;
+    font-size: 2em;
+    color: var(--cor3);
+}
+
 
 
 @media screen and (max-width: 600px){
