--- a/Estilo/style.css
+++ b/Estilo/style.css
@@ -311,7 +311,7 @@ footer p {
 
 
 
-@media screen and (max-width: 600px){
+@media screen and (max-width: 800px){
 
 body{
     width: 100%;
@@ -404,5 +404,31 @@ canvas{
  color: white;
  font-weight: bolder;
  }
+
+ .popup-wrapper {
+    background: rgba(0, 0, 0, .5);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.popup {
+    font-family: var(--fonte2);
+    text-align: center;
+    width: 100%;
+    max-width: 350px;
+    margin: 10% auto;
+    padding: 20px;
+    background: var(--cor2);
+    position: relative;
+}
+
+.popup h2 {
+    font-weight: bold;
+    font-size: 2em;
+    color: var(--cor3);
+}
 
 }
