--- a/Estilo/style.css
+++ b/Estilo/style.css
@@ -311,10 +311,10 @@ footer p {
 
 
 
-@media screen and (max-width: 800px){
+@media screen and (max-width: 820px){
 
 body{
-    width: 360px;
+    width: 100%;
 }
 
 main {
