--- a/Estilo/style.css
+++ b/Estilo/style.css
@@ -309,9 +309,78 @@ footer p {
     color: var(--cor3);
 }
 
+@media screen and (max-width: 1024px){
+    .div-letras{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    
+    .tecladoL1{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        margin: auto;
+    }
+    
+    .tecladoL2{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        margin: auto;
+    }
+    
+    .tecladoL3{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        margin: auto;
+    }
 
+    .div-letras {
+        margin-top: 10px;
+        margin-bottom: 0;
+    }
 
-@media screen and (max-width: 820px){
+    .div-letras button {
+        margin: 8px;
+        background-color: var(--cor1);
+        border-radius: 7px;
+        color: white;
+        font-weight: bolder;
+        width: 50px;
+        height: 50px;
+        text-align: center;
+        }
+       
+        .popup-wrapper {
+           background: rgba(0, 0, 0, .5);
+           position: fixed;
+           top: 0;
+           left: 0;
+           width: 100%;
+           height: 100%;
+       }
+       
+       .popup {
+           font-family: var(--fonte2);
+           text-align: center;
+           width: 100%;
+           margin: 60% auto;
+           padding: 20px;
+           background: var(--cor2);
+           position: relative;
+       }
+       
+       .popup h2 {
+           font-weight: bold;
+           font-size: 2em;
+           color: var(--cor3);
+       }
+
+}
+
+@media screen and (max-width: 480px){
 
 body{
     width: 100%;
@@ -372,6 +441,7 @@ ul#lista {
     margin: auto;
     font-size: 20px;
     color: var(--cor1);
+    margin-top: 10px;
 }
 
 footer{
@@ -415,8 +485,8 @@ canvas{
  border-radius: 7px;
  color: white;
  font-weight: bolder;
- width: 30px;
- height: 30px;
+ width: 40px;
+ height: 40px;
  text-align: center;
  }
 
@@ -453,4 +523,9 @@ canvas{
     width: 100%;
 }
 
+.icones {
+    margin: auto;
 }
+
+}
+
