--- a/Estilo/style.css
+++ b/Estilo/style.css
@@ -363,14 +363,15 @@ footer p {
        }
        
        .popup {
-           font-family: var(--fonte2);
-           text-align: center;
-           width: 100%;
-           margin: 60% auto;
-           padding: 20px;
-           background: var(--cor2);
-           position: relative;
-       }
+        font-family: var(--fonte2);
+        text-align: center;
+        width: 100%;
+        max-width: 820px;
+        margin: 10% auto;
+        padding: 20px;
+        background: var(--cor2);
+        position: relative;
+    }
        
        .popup h2 {
            font-weight: bold;
